# MLA_GPT

./: .gitignore  README.md  STRUCTURE.md  flashattn-build.txt  grid_search_results.csv  new_results.csv  pyproject.toml
data/: README.md  __init__.py  fineweb_data.py  llama_nemotron_data.py  wikitext_data.py
data/preprocessing/: __init__.py  clean_text.py
evaluation/: flash_eval_perplexity.py
models/: Makefile  README.md  create_grid_search.py  fast_gpt.py  gpt_custom_BPE.py  gpt_original.py  inference.py  mla_1.py  model_summary.py  print_res.sh  to_run.txt
models/logs/: events.out.tfevents.1742536893.8042d58f59e0.1102.0
models/runs/L10_H10/logs/: eval.txt  run.txt
models/runs/L10_H12/logs/: eval.txt  run.txt
models/runs/L10_H8/logs/: eval.txt  run.txt
models/runs/L12_H10/logs/: eval.txt  run.txt
models/runs/L12_H12/logs/: eval.txt  run.txt
models/runs/L12_H8/logs/: eval.txt  run.txt
models/runs/L14_H10/logs/: eval.txt  run.txt
models/runs/L14_H12/logs/: eval.txt  run.txt
models/runs/L14_H8/logs/: eval.txt  run.txt
models/transformer_setup/: __init__.py  mla_transformer.py  params.py  params.py.bak  params_hyper_tuning.py  transformer.py
tokenization/: __init__.py  count_tokens.py  custom_tokenizer.py  test_tokenize.py  tiktoken_tokenizer.py
tokenization/custom_tokenizer/: __init__.py  config.py  data_processing.py  temptrainer.py  train_nemotron_tokenizer.py  trainer.py
visualizations/: graphs.py
