[project]
name = "gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.3.2",
    "matplotlib>=3.10.1",
    "tensorboard>=2.19.0",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.1",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]